# inspire-sdk

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: ci.yml.example  sibling-comm-spec.md
examples/: mock-app.ts
inspire_sdk/: __init__.py  _client.py  _topics.py  _types.py
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: mock_app.py
sdk-python/inspire_sdk/: __init__.py  _client.py  _topics.py
sdk-python/inspire_sdk/sibling/: __init__.py  __main__.py  _client.py  _topics.py  _types.py
sdk-python/tests/: conftest.py  test_inspire.py  test_sibling.py
src/: bus.ts  config.ts  index.ts  topics.ts  types.ts
test/: bus.spec.ts  config-integration.spec.ts  config.spec.ts  conformance.spec.ts  inspire.spec.ts  rpc.spec.ts
