[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspire-sdk"
version = "0.2.0"
description = "Python SDK for inspire-* apps to participate in the inspire-atrium MQTT bus"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "amaitre" }]
keywords = ["inspire", "mqtt", "atrium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["paho-mqtt>=2.0.0", "typing_extensions>=4.0; python_version<"3.11""]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["inspire_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
